--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <h3>Module Assignments</h3>
     <ul>
-      <li><a href="#">Assignment 1.3</a></li>
-      <li><a href="#">Assignment 2.2</a></li>
-      <li><a href="#">Assignment 3.3</a></li>
+      <li><a href="module-1/johnson_Mod1_3.html">Assignment 1.3</a></li>
+      <li><a href="module-2/Johnson_Mod2_2.html">Assignment 2.2</a></li>
+      <li><a href="module-3/Johnson_Mod3_3.html">Assignment 3.3</a></li>
     </ul>
 
     <h3>Projects</h3>
