--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <h3>Projects</h3>
     <ul>
-      <li><a href="#">bioSite Project Home Page</a></li>
+      <li><a href="https://fffade.github.io/bioSite/">bioSite Project Home Page</a></li>
     </ul>
 
     <h4>Important Links</h4>
