--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li><a href="module-9/Johnson_Mod9_3.html">Assignment 9.3</a></li>
       <li><a href="module-10/Johnson_Mod10_3.html">Assignment 10.3</a></li>
       <li><a href="module-11/Johnson_Mod11_2.html">Assignment 11.2</a></li>
+      <li><a href="module-12/Johnson_Mod12_2.html">Assignment 12.2</a></li>
     </ul>
 
     <h3>Projects</h3>
